turtleart.polygon360.Polygon360.scala.error
Compilation error:
Polygon360:8: error: too many arguments for method getX: ()Double
  getX(263.968)
      ^Polygon360:9: error: too many arguments for method getY: ()Double
  getY(154.996)
      ^